--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
-
+        android:name="com.example.vasos.bookstoreapp.Helpers.AppController"
         android:allowBackup="true"
         android:icon="@mipmap/fullofbookslaunchericon"
         android:label="@string/app_name"
