Commit with fixed manifest, added login and register functionality with api, removed unused logout button, keep if user is logged in with shared preferences correctly. Now we have to implement functionality with apis for all books and buyed books by user

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,9 +3,10 @@
     package="com.example.vasos.bookstoreapp">
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
 
     <application
-        android:name="com.example.vasos.bookstoreapp.Helpers.AppController"
+        android:name=".Helpers.AppController"
         android:allowBackup="true"
         android:icon="@mipmap/fullofbookslaunchericon"
         android:label="@string/app_name"
