--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.vasos.bookstoreapp">
-    <uses-permission android:name="android.permission.INTERNET"/>
+
+    <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
 
@@ -13,9 +14,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Activities.Login"
-            android:theme="@style/AppTheme"
-            android:label="Bookstore">
+
+        <activity
+            android:name=".Activities.Login"
+            android:label="Bookstore"
+            android:theme="@style/AppTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -26,12 +29,17 @@
             android:name=".Activities.MainActivity"
             android:parentActivityName=".Activities.Login" />
         <activity android:name=".Activities.RegisterForm" />
-        <activity android:name=".Activities.AllBooks"
-            android:theme="@style/AppTheme"/><meta-data
-        android:name="android.support.PARENT_ACTIVITY"
-        android:value=".Activities.MainActivity" />
+        <activity
+            android:name=".Activities.AllBooks"
+            android:theme="@style/AppTheme" />
+
+        <meta-data
+            android:name="android.support.PARENT_ACTIVITY"
+            android:value=".Activities.MainActivity" />
+
         <activity android:name=".Activities.SingleBookDescription" />
-        <activity android:name=".Activities.BookView"></activity>
+        <activity android:name=".Activities.BookView" />
+        <activity android:name=".Activities.BuyBookActivity"></activity>
     </application>
 
 </manifest>
